--- a/package.json
+++ b/package.json
@@ -6,18 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --ext .js,.ts,.tsx .",
+    "lint:fix": "eslint --ext .js,.ts,.tsx . --fix"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^6",
+    "ioredis": "^5.0.4",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.30.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
-    "eslint": "8.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.14.0",
     "eslint-config-next": "12.1.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
