--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6",
     "ioredis": "^5.0.4",
     "next": "12.1.0",
