--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@reduxjs/toolkit": "^1.8.1",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.11",
     "framer-motion": "^6",
     "ioredis": "^5.0.4",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.30.0"
+    "react-hook-form": "^7.30.0",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
